<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/backGroundLayoutColorPattern"
        android:orientation="vertical"
>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
    >


        <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blackStronger"
        >

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginRight="@dimen/margin_medium"
                    android:orientation="vertical">
                <ImageView android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_gravity="center"
                           android:src="@drawable/swipe_bar"
                />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/textRecibo"
                        android:layout_marginTop="@dimen/margin_small"
                        android:textSize="@dimen/textSize_medium"
                        android:layout_gravity="center"
                        android:textColor="@color/whinte"
                />
            </LinearLayout>

        </android.support.v7.widget.Toolbar>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
        >

            <ImageView android:layout_width="@dimen/imageSize_big"
                       android:layout_height="@dimen/imageSize_big"
                       android:layout_marginTop="@dimen/margin_medium"
                       android:layout_gravity="center"
                       tools:src="@mipmap/ic_launcher_round"
                       android:textSize="@dimen/textSize_giant"
                       android:id="@+id/bsImage"
            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    tools:text="@string/toolsUsername"
                    android:textSize="@dimen/textSize_big"
                    android:layout_gravity="center"
                    android:textColor="@color/whinte"
                    android:id="@+id/bsUserName"
            />

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="@dimen/margin_small"
                      tools:text="@string/hintHourDate"
                      android:textSize="@dimen/textSize_medium"
                      android:layout_gravity="center"
                      android:textColor="@color/whinte"
                      android:id="@+id/bsTime"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    tools:text="@string/hintTransaction"
                    android:textSize="@dimen/textSize_small"
                    android:layout_gravity="center"
                    android:textColor="@color/whinte"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:id="@+id/bsTransaction"
            />

            <View android:layout_width="match_parent"
                  android:layout_height="1dp"
                  android:background="@color/grayColor"
                  android:layout_margin="@dimen/margin_medium"
            />
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:weightSum="3"
        >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    tools:text="@string/TextcredCard"
                    android:textColor="@color/whinte"
                    android:id="@+id/bsHolderName"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/symbolReal"
                    android:textColor="@color/whinte"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/hintZero"
                    android:textColor="@color/whinte"
                    android:id="@+id/bsValue"
            />
        </LinearLayout>
        <View android:layout_width="match_parent"
              android:layout_height="1dp"
              android:background="@color/grayColor"
              android:layout_margin="@dimen/margin_medium"
        />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/margin_extra_big"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:weightSum="3"
        >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/textAllValue"
                    android:textColor="@color/whinte"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/symbolReal"
                    android:textColor="@color/whinte"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/hintZero"
                    android:textColor="@color/whinte"
                    android:id="@+id/bsValueFinal"
            />
        </LinearLayout>


    </LinearLayout>
</ScrollView>