<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/backGroundLayoutColorPattern"
        tools:context=".feature.registerCard.RegisterActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    </android.support.v7.widget.Toolbar>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra_big"
            android:layout_marginBottom="@dimen/margin_extra_big"
            android:orientation="vertical">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
        >

            <TextView android:id="@+id/cadastrarText"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/registerCard"
                      android:layout_marginLeft="@dimen/margin_big"
                      android:textSize="@dimen/textSize_giant"
                      android:textColor="@color/whinte"
            />

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/numberCardTl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    app:errorEnabled="true"
            >
            <android.support.design.widget.TextInputEditText
                    android:id="@+id/numberCardEd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textSize_medium"
                    android:hint="@string/numberCardHint"

            />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/holderNameTl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/holderNameEd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/holderNameHint"
                    android:textSize="@dimen/textSize_medium"
                    android:layout_marginTop="@dimen/margin_big"
            />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:weightSum="2"
                    android:id="@+id/a7">

                <android.support.design.widget.TextInputLayout
                        android:id="@+id/expirationDateTl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:errorEnabled="true"

                >
                <android.support.design.widget.TextInputEditText
                        android:id="@+id/expirationDateEd"
                        android:layout_width= "match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="@dimen/textSize_medium"
                        android:hint="@string/expirationDateHint"
                        android:textColorHint="@color/colorPrimary"
                />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                        android:id="@+id/cvvCardTl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:errorEnabled="true"

                >
                <android.support.design.widget.TextInputEditText
                        android:id="@+id/cvvCardEd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="@dimen/textSize_medium"
                        android:hint="@string/cvvHint"
                        android:textColorHint="@color/colorPrimary"
                />
                </android.support.design.widget.TextInputLayout>



            </LinearLayout>
        </LinearLayout>



    </ScrollView>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_alignParentBottom="true">

        <Button
                android:id="@+id/RegisterCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Salvar"
                android:textColor="@color/whinte"
                android:visibility="gone"
                tools:visibility="visible"
                android:background="@drawable/buttonbackground" />
    </LinearLayout>
</RelativeLayout>